2007-05-31  Emmanuel Dreyfus <manu@netbsd.org>
	From Joy Latten <latten@austin.ibm.com>
	* src/racoon/{main.c|policy.h|security.c}: Fix file descriptor 
	  shortage when using labeled IPsec.

2007-05-30  Emmanuel Dreyfus <manu@netbsd.org>
	From Jianli Liu <jlliu@nortel.com>:
	* src/racoon/kmpstat.c: Use the specified socket path instead of 
	  the default location

2007-05-04  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/pfkey.c: Force the update of ph2 in pk_recvupdate()
	  if NAT_T support, to solve some port match problems with the
	  first IPSec SAs negociated as initiator.
	* src/racoon/isakmp_inf.c: added some debug for DELETE_SA process.
	* src/racoon/isakmp.c: added some debug in isakmp_chkph1there() to
	  track some port matching problems with NAT-T.
	* src/racoon/handler.c: added some debug in getph1byaddr() to
	  track some port matching problems with NAT-T.
	* src/racoon/handler.c: search a ph1 by address if iph2->ph1 is
	  NULL when validating the new config.

2007-04-04  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/oakley.c: dumps peer's ID and peer's certificate
	  subject /subjectaltname if they don't match.
	* src/racoon/ipsec_doi.c: checks proto_id in ipsecdoi_chkcmpids().

2007-03-26  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp_inf.c: Store the DPD main scheduler in ph1
	  handler, to be able to cancel it when removing the handler, and
	  some minor cleanups in DPD code.

2007-03-23  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/{oakley.c|racoon.conf.5}: give more details about
	  what is checked when using certificates to authenticate. Patch
	  by Cyrus Rahman.
	* src/racoon/handler.c: expire zombie handlers in getph2byid(), to
	  avoid situations where we'll never negociate a phase2
	  again. Would be better to find out why do we have such zombies !!
	* src/racoon/{ipsec_doi.c|security.c}: fixed a segfault when using
	  security labels between a 32bit and a 64bit host. Patch by
	  Joy Latten.
